# reactive-monitor

./: CHANGELOG.md  LICENSE  README.md  flake.nix
reactive-monitor/: default.nix  reactive-monitor.cabal
reactive-monitor-client/: CHANGELOG.md  default.nix  reactive-monitor-client.cabal
reactive-monitor-client/src/: MyLib.hs
reactive-monitor-common/: CHANGELOG.md  default.nix  reactive-monitor-common.cabal
reactive-monitor-common/src/Data/: StreamEvent.hs
reactive-monitor-common/src/Data/Word/: Encoding.hs
reactive-monitor-common/test/: Main.hs
reactive-monitor/src/: MyLib.hs  Stream.hs
reactive-monitor/test/: MyLibTest.hs
src/: Auto.hs  Stream.hs
