cabal-version:      3.0
name:               reactive-monitor-client
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mats Rauhala
maintainer:         mats.rauhala@iki.fi
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , binary
                    , text
                    , reactive-monitor-common
                    , network-simple
                    , network
                    , binary
                    , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite reactive-monitor-client-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.1.0,
        reactive-monitor-client,
        hedgehog,
        hspec,
        hspec-hedgehog
